--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lottiefiles/react-lottie-player": "^3.4.9",
     "eslint-config-next": "13.0.3",
     "next": "13.0.3",
     "prop-types": "^15.8.1",
