--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,8 @@
 { 
  "printWidth": 100,
- "trailingComma": "all",
+ "trailingComma": "es5",
  "tabWidth": 2, 
  "semi": true, 
- "singleQuote": true
+ "singleQuote": true,
+ "useTabs": false
 }
