--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
     "postcss": "^8.4.19",
     "prettier": "2.7.1",
     "tailwindcss": "^3.2.4"
+  },
+  "resolutions": {
+    "webpack": "^5"
   }
 }
