--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@react-pdf/renderer": "^3.0.1",
+    "@reduxjs/toolkit": "^1.9.0",
     "eslint-config-next": "13.0.3",
+    "firebase": "^9.14.0",
     "framer-motion": "^7.6.7",
     "next": "13.0.3",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
-    "react-lottie": "^1.2.3"
+    "react-lottie": "^1.2.3",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
