--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-storybook": "^0.6.7",
     "postcss": "^8.4.19",
     "prettier": "2.7.1",
+    "tailwind-scrollbar": "^2.0.1",
     "tailwindcss": "^3.2.4"
   },
   "resolutions": {
